--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,9 @@
 inherit_from: .rubocop_todo.yml
 Style/Documentation:
   Enabled: false
+
+  Metrics/BlockLength:
+  Exclude:
+    - 'Rakefile'
+    - '**/*.rake'
+    - 'test/**/*.rb'
